--- a/assets/HTML/BOOTSTRAP.HTML
+++ b/assets/HTML/BOOTSTRAP.HTML
@@ -121,8 +121,8 @@
     <div
       class="row d-flex flex-row flex-nowrap p-3 m-2 bg-danger justify-content-center"
     >
-      <div class="col-3 order-2 m-2 p-3 bg-info text-center">prima</div>
-      <div class="col-3 order-0 m-2 p-3 bg-info text-center">seconda</div>
+      <div class="col-3 order-2 m-2 p-3 bg-info text-center">prima.</div>
+      <div class="col-3 order-0 m-2 p-3 bg-info text-center">seconda.</div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
